# PyGentic

./: .gitignore  .tmuxp.yaml  README.md  pyproject.toml
examples/: pygentic_demo.py  self_generating_demo.py
src/pygentic/: __init__.py  base_llm.py  config.py  conversation_llm.py  genmodel.py  llm_config.py  self_generating_base.py  simple_llm.py  utils.py
